[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Slime.gd" type="Script" id=1]
[ext_resource path="res://Art/Slime_Medium_Green.png" type="Texture" id=2]

[node name="Slime" type="Sprite" groups=["Slime"]]
position = Vector2( 428, 170 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = 38.0
margin_right = 47.0
margin_bottom = 58.0
text = "adadd"

[node name="JobTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0862745, 0.917647, 0.137255, 1 )
texture = ExtResource( 2 )

[node name="RetryJobTimer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="timeout" from="JobTimer" to="." method="_on_JobTimer_timeout"]
